--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Core dependencies
+beautifulsoup4>=4.12.0
+python-dotenv>=1.0.0
+openai>=1.0.0
+lxml>=4.9.0
+
 # Development dependencies
 pytest>=7.0.0
 pytest-cov>=4.0.0
